syntax = "proto3";

option csharp_namespace = "BookInventory";

package bookinventory;

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 publication_year = 4;
}

message BookId {
  string id = 1;
}

message Empty {}

service BookService {
  rpc AddBook(Book) returns (Empty);
  rpc GetBook(BookId) returns (Book);
  rpc UpdateBook(Book) returns (Empty);
  rpc DeleteBook(BookId) returns (Empty);
  rpc ListBooks(Empty) returns (stream Book);
}
